--- a/package.json
+++ b/package.json
@@ -3,25 +3,39 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
+    "@chakra-ui/react": "^2.7.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^2.9.10",
-    "@mui/icons-material": "^5.11.0",
-    "@mui/material": "^5.11.7",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.11.11",
+    "@mui/lab": "^5.0.0-alpha.124",
+    "@mui/material": "^5.13.7",
     "@mui/styled-engine-sc": "^5.11.0",
+    "@mui/styles": "^5.11.16",
     "@mui/x-data-grid": "^5.17.22",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.3",
+    "chart.js": "^4.3.0",
+    "date-fns": "^2.30.0",
+    "framer-motion": "^10.12.18",
     "install": "^0.13.0",
-    "react": "17.0.0",
-    "react-dom": "17.0.0",
+    "material-kit-react": "^1.10.0",
+    "react": "^17.0.2",
+    "react-bootstrap": "^2.8.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "17.0.2",
     "react-hook-form": "^7.41.5",
+    "react-icons": "^4.10.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "5.2.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
     "react-toastify": "^9.1.1",
+    "reactstrap": "^9.1.8",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
@@ -43,5 +57,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.3.3"
   }
 }
